--- a/interview_tool_spring/src/main/resources/templates/new-interview.html
+++ b/interview_tool_spring/src/main/resources/templates/new-interview.html
@@ -5,6 +5,12 @@
     <title>Interview</title>
 </head>
 <body>
-
+<main>
+    <div class="content">
+        <form>
+            <label>Choose a candidate</label>
+        </form>
+    </div>
+</main>
 </body>
 </html>
