navbar works and is emplemented in all templates

--- a/interview_tool_spring/src/main/resources/templates/interview.html
+++ b/interview_tool_spring/src/main/resources/templates/interview.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Interview</title>
 </head>
 <body>
-
+    <header class="header">
+        <div class="navbar sticky-top" th:insert="navbar.html"></div>
+        <h1 class="h1 text-center">Interview</h1>
+    </header>
+    <main></main>
+    <footer class="text-center"></footer>
 </body>
 </html>
