--- a/interview_tool_spring/src/main/resources/templates/candidates.html
+++ b/interview_tool_spring/src/main/resources/templates/candidates.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Candidates overview</title>
+<head th:insert="navbar.html :: head">
+    <title>Candidates</title>
 </head>
 <body>
+<header class="header" th:insert="navbar.html :: nav">
+    <h1 class="h1 text-center">Candidates</h1>
+</header>
     <main>
         <table class="table">
             <thead>
-            <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>E-mail</th>
-                <th>Role</th>
-            </tr>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>E-mail</th>
+                    <th>Role</th>
+                    <th></th>
+                    <th></th>
+                </tr>
             </thead>
             <tbody>
-            <tr th:each="candidate : ${candidates}">
-                <td th:text="${candidate.getFirstname()}"></td>
-                <td th:text="${candidate.getLastname()}"></td>
-                <td th:text="${candidate.getEmail()}"></td>
-                <td th:text="${candidate.getRole()}"></td>
-                <td><a th:href="@{/candidates/edit/{id}(id=${candidate.getId()})}" class="btn">Edit</a></td>
-                <td><a th:href="@{/candidates/delete/{id}(id=${candidate.getId()})}" class="btn">Delete</a></td>
-            </tr>
+                <tr th:each="candidate : ${candidates}">
+                    <td th:text="${candidate.getFirstName()}"></td>
+                    <td th:text="${candidate.getLastName()}"></td>
+                    <td th:text="${candidate.getEmail()}"></td>
+                    <td class="role" th:text="${candidate.getRole()}"></td>
+                    <td><a th:href="@{/candidates/edit/{id}(id=${candidate.getId()})}" class="btn btn-primary btn-sm">Edit</a></td>
+                    <td><a th:href="@{/candidates/delete/{id}(id=${candidate.getId()})}" class="btn btn-primary btn-sm">Delete</a></td>
+                </tr>
             </tbody>
         </table>
-        <a th:href="@{/candidates/new}" class="btn">Add</a>
+        <a th:href="@{/candidates/new}" class="btn btn-primary btn-lg">Add</a>
     </main>
+    <footer class="text-center"></footer>
 </body>
 </html>
