--- a/interview_tool_spring/src/main/resources/templates/dashboard.html
+++ b/interview_tool_spring/src/main/resources/templates/dashboard.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+<head th:insert="navbar.html :: head">
     <title>Dashboard</title>
 </head>
 <body>
-    <main>
-        <nav class="nav-bar">
-            <a th:href="@{/interview/start}" class="btn menu-item ">Start new interview</a>
-            <a th:href="@{/candidates}" class="btn menu-item manager-admin">Manage candidates</a>
-            <a th:href="@{/candidates/new}" class="btn">Add candidate</a>
-            <a th:href="@{/questions}" class="btn menu-item manager-admin">Manage questions and answers</a>
+<header class="header">
+    <div>
+        <nav class="navbar sticky-top">
+            <a th:href="@{/interview/start}" class="btn btn-primary btn-lg">Start new interview</a>
+            <a th:href="@{/candidates}" class="btn btn-primary btn-lg">Manage candidates</a>
+            <a th:href="@{/questions}" class="btn btn-primary btn-lg">Manage questions and answers</a>
+            <a th:href="@{/log-out}" class="btn btn-primary btn-lg"> <span class="glyphicon glyphicon-log-out"></span> Log out</a>
         </nav>
-        <h1>Page under construction</h1>
+    </div>
+    <div class="content">
+        <h1 class="h1">Page under construction</h1>
+        <section class="listing">
+            <img src="/images/bob.png" alt="Bob the builder" class="photo">
+        </section>
+    </div>
+</header>
+    <main>
+
     </main>
+    <footer class="text-center"></footer>
 </body>
 </html>
