--- a/interview_tool_spring/src/main/resources/templates/index.html
+++ b/interview_tool_spring/src/main/resources/templates/index.html
@@ -2,29 +2,33 @@
 <html lang="en", xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Log In</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <title>Dashboard</title>
 </head>
 <body>
-<main>
     <header class="header">
         <h1 class="h1 text-center">Log In</h1>
     </header>
-    <div class="content">
-        <form class="form" novalidate>
-            <div class="form__group">
-                <label for="email">e-mail</label>
-                <input class="form__controll" type="email" name="email" id="email" placeholder="John.Doe@elmos.com" title="last name" required/>
-            </div>
-            <div class="form__group">
-                <label for="password">Telephone number</label>
-                <input class="form__controll" type="password" name="password" id="password" placeholder="Enter your password" title="password" required/>
-            </div>
-            <div class = "allerts" id="allerts"></div>
-            <button type="submit" class="button" id="submit">Log in</button>
-        </form>
-    </div>
-    <footer class="text-center">
-    </footer>
-</main>
+    <main>
+        <div class="content">
+            <form class="form" novalidate>
+                <div class="form__group">
+                    <label for="email">e-mail</label>
+                    <input class="form__control" type="email" name="email" id="email" placeholder="John.Doe@elmos.com" title="last name" required/>
+                </div>
+                <div class="form__group">
+                    <label for="password">password</label>
+                    <input class="form__control" type="password" name="password" id="password" placeholder="Enter your password" title="password" required/>
+                </div>
+                <div class="alerts" id="alerts"></div>
+                <button type="submit" class="btn btn-primary btn-lg" id="submit">Log in</button>
+            </form>
+        </div>
+    </main>
+    <footer class="text-center"></footer>
 </body>
 </html>
