--- a/interview_tool_spring/src/main/resources/templates/new-question.html
+++ b/interview_tool_spring/src/main/resources/templates/new-question.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Add question</title>
 </head>
 <body>
+<header class="header">
+    <div class="navbar sticky-top" th:insert="navbar.html"></div>
+    <h1 class="h1 text-center">New Question</h1>
+</header>
 <main>
     <form th:action="@{/questions/add}" th:object="${question}" method="post" class = "form" novalidate>
-        <div class="form-group">
-            <label class="label">Who should this question be asked to?</label>
-            <input type="radio" id="junior" th:field="*{role}" th:value="junior" checked>
-            <label for="junior">Junior</label>
-            <input type="radio" id="medior" th:field="*{role}" th:value="medior">
-            <label for="medior">Medior</label>
-            <input type="radio" id="senior" th:field="*{role}" th:value="senior">
-            <label for="senior">Senior</label>
-            <input type="radio" id="everyone" th:field="*{role}" th:value="">
-            <label for="everyone">Everyone</label>
-        </div>
-        <div class="form-group">
-            <label class="label">Who should ask this question</label>
-            <input type="radio" id="recruiter" th:field="*{category}" th:value="recruiting" checked>
-            <label for="recruiter">Recruiter</label>
-            <input type="radio" id="technical" th:field="*{category}" th:value="technical">
-            <label for="technical">Technical assessor</label>
-        </div>
-        <div class="form-group">
-            <label class="label">When should the question be asked and is it required</label>
-            <input type="radio" id="start" th:field="*{questionType}" th:value="start" checked>
-            <label for="start">At the start (required question)</label>
-            <input type="radio" id="middle" th:field="*{questionType}" th:value="middle">
-            <label for="middle">In the middle (non required question)</label>
-            <input type="radio" id="end" th:field="*{questionType}" th:value="end">
-            <label for="end">Technical assessor</label>
-        </div>
-        <div class="form-group">
+        <p>Who should this question be asked to?</p>
+            <input class="btn-check" type="radio" id="junior" autocomplete="off" th:field="*{role}" th:value="junior" checked>
+            <label class="btn" for="junior">Junior</label>
+            <input class="btn-check" type="radio" id="medior" autocomplete="off" th:field="*{role}" th:value="medior">
+            <label class="btn" for="medior">Medior</label>
+            <input class="btn-check" type="radio" id="senior" autocomplete="off" th:field="*{role}" th:value="senior">
+            <label class="btn" for="senior">Senior</label>
+            <input class="btn-check" type="radio" id="everyone" autocomplete="off" th:field="*{role}" th:value="''">
+            <label class="btn" for="everyone">Everyone</label>
+
+        <p>Who should ask this question</p>
+            <input  class="btn-check" type="radio" id="recruiter" autocomplete="off" th:field="*{category}" th:value="recruiting" checked>
+            <label class="btn" for="recruiter">Recruiter</label>
+            <input class="btn-check" type="radio" id="technical" autocomplete="off" th:field="*{category}" th:value="technical">
+            <label class="btn" for="technical">Technical assessor</label>
+
+        <p>When should the question be asked and is it required</p>
+            <input class="btn-check" type="radio" id="start" autocomplete="off" th:field="*{questionType}" th:value="start" checked>
+            <label class="btn" for="start">At the start (required question)</label>
+            <input class="btn-check" type="radio" id="middle" autocomplete="off" th:field="*{questionType}" th:value="middle">
+            <label class="btn" for="middle">In the middle (non required question)</label>
+            <input class="btn-check" type="radio" id="end" autocomplete="off" th:field="*{questionType}" th:value="end">
+            <label class="btn" for="end">Technical assessor</label>
             <label for="question" class="label">Question</label>
             <input type="text" th:field="*{question}" id="question" placeholder="What can you tel me about...?" maxlength="255" required>
-        </div>
-        <input type="submit" class="btn" id="submit" value="Start">
+
+        <input type="submit" class="btn btn-primary btn-lg" id="submit" value="Start">
     </form>
 </main>
+<footer class="text-center"></footer>
 </body>
 </html>
