--- a/interview_tool_spring/src/main/resources/templates/candidates.html
+++ b/interview_tool_spring/src/main/resources/templates/candidates.html
@@ -4,10 +4,9 @@
     <title>Candidates</title>
 </head>
 <body>
-<header class="header" th:insert="navbar.html :: nav">
-    <h1 class="h1 text-center">Candidates</h1>
-</header>
-    <main>
+<header class="header" th:insert="navbar.html :: nav"></header>
+    <main class="main">
+        <h1 class="h1 text-center">Candidates</h1>
         <table class="table">
             <thead>
                 <tr>
