--- a/interview_tool_spring/src/main/resources/templates/index.html
+++ b/interview_tool_spring/src/main/resources/templates/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="h1 text-center">Log In</h1>
     </header>
-    <main>
+    <main class="main">
         <div class="content">
+            <h1 class="h1 text-center">Log In</h1>
             <form class="form" novalidate>
                 <div class="form__group">
                     <label for="email">e-mail</label>
