--- a/interview_tool_spring/src/main/resources/templates/interview.html
+++ b/interview_tool_spring/src/main/resources/templates/interview.html
@@ -8,7 +8,7 @@
         <div class="navbar sticky-top" th:insert="navbar.html"></div>
         <h1 class="h1 text-center">Interview</h1>
     </header>
-    <main></main>
+    <main class="main"></main>
     <footer class="text-center"></footer>
 </body>
 </html>
