--- a/interview_tool_spring/src/main/resources/templates/questions.html
+++ b/interview_tool_spring/src/main/resources/templates/questions.html
@@ -9,9 +9,8 @@
 <!--  <div class="navbar sticky-top" th:insert="navbar.html :: nav"></div>-->
   <!--  <div><p>test</p></div>-->
   <!--  <nav class="navbar sticky-top" th:insert="navbar.html :: nav"></nav>-->
-  <h1 class="h1 text-center">Questions</h1>
 </header>
-<main>
+<main class="main">
   <h1 class="h1 text-center">Questions</h1>
   <table class="table">
     <tbody>
