--- a/interview_tool_spring/src/main/resources/templates/navbar.html
+++ b/interview_tool_spring/src/main/resources/templates/navbar.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+<!--    <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">-->
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
     <header>
-        <nav class="navbar sticky-top">
+        <nav class="navbar fixed-top bg-body-tertiary">
             <a th:href="@{/}" class="btn btn-primary btn-lg">Home</a>
-            <a th:href="@{/log-out}" class="btn btn-primary btn-lg"> <span class="glyphicon glyphicon-log-out"></span> Log out</a>
+            <a th:href="@{/log-out}" class="btn btn-primary btn-lg"> <i class="bi bi-box-arrow-right"></i> Log out</a>
         </nav>
     </header>
 </body>
