--- a/interview_tool_spring/src/main/resources/templates/new-interview.html
+++ b/interview_tool_spring/src/main/resources/templates/new-interview.html
@@ -4,17 +4,18 @@
     <title>New Interview</title>
 </head>
 <body>
-<header class="header" th:insert="navbar.html :: nav">
-    <h1 class="h1 text-center">New Interview</h1>
-</header>
-<main>
+<header class="header" th:insert="navbar.html :: nav"></header>
+<main class="main">
     <div class="content">
+        <h1 class="h1 text-center">New Interview</h1>
         <form th:action="@{/interview/start-interview}" th:object="${candidate}" method="post" class = "form">
-            <label for="dropDownList">Choose a candidate</label>
-            <select class="form-control drop" id="dropDownList">
-                <option value="0">select interviewee</option>
-                <option class="dropitem" th:each="candidate : ${candidates}" th:value="${candidate}" th:text="|${candidate.getFirstName()} ${candidate.getLastName()}|"></option>
-            </select>
+            <div class="form-group">
+                <label for="dropDownList">Choose a candidate</label>
+                <select class="form-select" id="dropDownList" aria-label="Default select example">
+                    <option value="0">select interviewee</option>
+                    <option th:each="candidate : ${candidates}" th:value="${candidate}" th:text="|${candidate.getFirstName()} ${candidate.getLastName()}|"></option>
+                </select>
+            </div>
             <input type="submit" class="btn btn-primary btn-lg" id="submit" value="Start interview">
         </form>
     </div>
