--- a/interview_tool_spring/src/main/resources/templates/dashboard.html
+++ b/interview_tool_spring/src/main/resources/templates/dashboard.html
@@ -8,6 +8,7 @@
     <nav class="navbar fixed-top bg-body-tertiary">
         <a th:href="@{/interview/start}" class="btn btn-primary btn-lg">Start new interview</a>
         <a th:href="@{/candidates}" class="btn btn-primary btn-lg">Manage candidates</a>
+        <a th:href="@{/employees}" class="btn btn-primary btn-lg">Manage Employees</a>
         <a th:href="@{/questions}" class="btn btn-primary btn-lg">Manage questions and answers</a>
         <a th:href="@{/log-out}" class="btn btn-primary btn-lg"> <i class="bi bi-box-arrow-right"></i> Log out</a>
     </nav>
