--- a/interview_tool_spring/src/main/resources/templates/new-question.html
+++ b/interview_tool_spring/src/main/resources/templates/new-question.html
@@ -9,32 +9,32 @@
     <h1 class="h1 text-center">New Question</h1>
     <form th:action="@{/questions/add}" th:object="${question}" method="post" class = "form" novalidate>
         <p>Who should this question be asked to?</p>
-            <input class="btn-check" type="radio" id="junior" autocomplete="off" th:field="*{role}" th:value="junior" checked>
+            <input class="btn-check" type="radio" id="junior" autocomplete="off" th:field="*{role}" th:value="j" checked>
             <label class="btn" for="junior">Junior</label>
-            <input class="btn-check" type="radio" id="medior" autocomplete="off" th:field="*{role}" th:value="medior">
+            <input class="btn-check" type="radio" id="medior" autocomplete="off" th:field="*{role}" th:value="c">
             <label class="btn" for="medior">Medior</label>
-            <input class="btn-check" type="radio" id="senior" autocomplete="off" th:field="*{role}" th:value="senior">
+            <input class="btn-check" type="radio" id="senior" autocomplete="off" th:field="*{role}" th:value="q">
             <label class="btn" for="senior">Senior</label>
             <input class="btn-check" type="radio" id="everyone" autocomplete="off" th:field="*{role}" th:value="''">
             <label class="btn" for="everyone">Everyone</label>
 
         <p>Who should ask this question</p>
-            <input  class="btn-check" type="radio" id="recruiter" autocomplete="off" th:field="*{category}" th:value="recruiting" checked>
+            <input  class="btn-check" type="radio" id="recruiter" autocomplete="off" th:field="*{category}" th:value="r" checked>
             <label class="btn" for="recruiter">Recruiter</label>
-            <input class="btn-check" type="radio" id="technical" autocomplete="off" th:field="*{category}" th:value="technical">
+            <input class="btn-check" type="radio" id="technical" autocomplete="off" th:field="*{category}" th:value="t">
             <label class="btn" for="technical">Technical assessor</label>
 
         <p>When should the question be asked and is it required</p>
-            <input class="btn-check" type="radio" id="start" autocomplete="off" th:field="*{questionType}" th:value="start" checked>
+            <input class="btn-check" type="radio" id="start" autocomplete="off" th:field="*{questionType}" th:value="s" checked>
             <label class="btn" for="start">At the start (required question)</label>
-            <input class="btn-check" type="radio" id="middle" autocomplete="off" th:field="*{questionType}" th:value="middle">
+            <input class="btn-check" type="radio" id="middle" autocomplete="off" th:field="*{questionType}" th:value="m">
             <label class="btn" for="middle">In the middle (non required question)</label>
-            <input class="btn-check" type="radio" id="end" autocomplete="off" th:field="*{questionType}" th:value="end">
+            <input class="btn-check" type="radio" id="end" autocomplete="off" th:field="*{questionType}" th:value="e">
             <label class="btn" for="end">Technical assessor</label>
             <label for="question" class="label">Question</label>
             <input type="text" th:field="*{question}" id="question" placeholder="What can you tel me about...?" maxlength="255" required>
 
-        <input type="submit" class="btn btn-primary btn-lg" id="submit" value="Start">
+        <input type="submit" class="btn btn-primary btn-lg" id="submit" value="Save">
     </form>
 </main>
 <footer class="text-center"></footer>
