--- a/interview_tool_spring/src/main/resources/templates/update-question.html
+++ b/interview_tool_spring/src/main/resources/templates/update-question.html
@@ -10,27 +10,27 @@
         <h1 class="h1 text-center">Update Question</h1>
         <form th:action="@{/candidates/update/{id}(id=${id})}" th:object="${q}" method="post" id="question-info" class="form" novalidate>
             <p>Who should this question be asked to?</p>
-                <input class="btn-check" type="radio" id="junior" autocomplete="off" th:field="*{role}" value="junior" th:checked="${q.getRole()} == 'junior'">
+                <input class="btn-check" type="radio" id="junior" autocomplete="off" th:field="*{role}" value="j">
                 <label class="btn" for="junior">Junior</label>
-                <input class="btn-check" type="radio" id="medior" autocomplete="off" th:field="*{role}" value="medior" th:checked="${q.getRole()} == 'medior'">
+                <input class="btn-check" type="radio" id="medior" autocomplete="off" th:field="*{role}" value="c">
                 <label class="btn" for="medior">Medior</label>
-                <input class="btn-check" type="radio" id="senior" autocomplete="off" th:field="*{role}" value="senior" th:checked="${q.getRole()} == 'senior'">
+                <input class="btn-check" type="radio" id="senior" autocomplete="off" th:field="*{role}" value="s">
                 <label class="btn" for="senior">Senior</label>
-                <input class="btn-check" type="radio" id="everyone" autocomplete="off" th:field="*{role}" value="" th:checked="${q.getRole()} == ''">
+                <input class="btn-check" type="radio" id="everyone" autocomplete="off" th:field="*{role}" value="">
                 <label class="btn" for="everyone">Everyone</label>
 
             <p>Who should ask this question?</p>
-                <input class="btn-check" type="radio" id="recruiter" autocomplete="off" th:field="*{category}" th:value="recruiting" th:checked="${q.getCategory()} == 'recruiting'">
+                <input class="btn-check" type="radio" id="recruiter" autocomplete="off" th:field="*{category}" th:value="r">
                 <label class="btn" for="recruiter">Recruiter</label>
-                <input class="btn-check" type="radio" id="technical" autocomplete="off" th:field="*{category}" th:value="technical" th:checked="${q.getCategory()} == 'technical'">
+                <input class="btn-check" type="radio" id="technical" autocomplete="off" th:field="*{category}" th:value="t">
                 <label class="btn" for="technical">Technical assessor</label>
 
             <p>When should the question be asked and is it required</p>
-                <input class="btn-check" type="radio" id="start" autocomplete="off" th:field="*{questionType}" th:value="start'" th:checked="${q.getQuestionType()} == 'start'">
+                <input class="btn-check" type="radio" id="start" autocomplete="off" th:field="*{questionType}" th:value="s'">
                 <label class="btn" for="start">At the start (required question)</label>
-                <input class="btn-check" type="radio" id="middle" autocomplete="off" th:field="*{questionType}" th:value="middle" th:checked="${q.getQuestionType()} == 'middle'">
+                <input class="btn-check" type="radio" id="middle" autocomplete="off" th:field="*{questionType}" th:value="m">
                 <label class="btn" for="middle">In the middle (non required question)</label>
-                <input class="btn-check" type="radio" id="end" autocomplete="off" th:field="*{questionType}" th:value="end" th:checked="${q.getQuestionType()} == 'end'">
+                <input class="btn-check" type="radio" id="end" autocomplete="off" th:field="*{questionType}" th:value="e">
                 <label class="btn" for="end">Technical assessor</label>
 
             <div>
